test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: 058264165895.dkr.ecr.ap-south-1.amazonaws.com/frontend-cdp:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
