test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - test.9-tails-fox.tech
    secretName: tls-secret-x
  rules:
  - host: test.9-tails-fox.tech
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: myapp-service
            port:
              number: 80
